Tests/SwapRelation.lean
import Quotify.Tactic
import Quotify.Unexpanders

attribute [quotify] List.isSetoid

/--
error: unsolved goals
l‚āĀ l‚āā : List Nat
h : ‚ü¶l‚āĀ.reverse‚üß = ‚ü¶l‚āā.reverse‚üß
‚äĘ ‚ü¶l‚āĀ‚üß = ‚ü¶l‚āā‚üß
-/
#guard_msgs in
example (l‚āĀ l‚āā : List Nat) (h : l‚āĀ.reverse.Perm l‚āā.reverse) : l‚āĀ.Perm l‚āā := by
  quotify

/--
error: unsolved goals
őĪ : Type u_1
l‚āĀ l‚āā : List őĪ
h : ‚ü¶l‚āĀ.reverse‚üß = ‚ü¶l‚āā.reverse‚üß
‚äĘ ‚ü¶l‚āĀ‚üß = ‚ü¶l‚āā‚üß
-/
#guard_msgs in
example (l‚āĀ l‚āā : List őĪ) (h : l‚āĀ.reverse.Perm l‚āā.reverse) : l‚āĀ.Perm l‚āā := by
  quotify

/--
error: unsolved goals
l‚āĀ l‚āā : List Nat
‚äĘ ‚ü¶l‚āĀ‚üß = ‚ü¶l‚āā‚üß
-/
#guard_msgs in
example (l‚āĀ l‚āā : List Nat) : l‚āĀ ‚Čą l‚āā := by
  quotify

/--
error: unsolved goals
őĪ : Type u_1
l‚āĀ l‚āā : List őĪ
h : ‚ü¶l‚āĀ.reverse‚üß = ‚ü¶l‚āā.reverse‚üß
‚äĘ ‚ü¶l‚āĀ‚üß = ‚ü¶l‚āā‚üß
-/
#guard_msgs in
example (l‚āĀ l‚āā : List őĪ) (h : l‚āĀ.reverse ‚Čą l‚āā.reverse) : l‚āĀ ‚Čą l‚āā := by
  quotify
